--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -128,6 +128,7 @@ body {
 .intro {
   @include font-weight(medium);
   font-size: 21px;
+  line-height: 30px;
 }
 
 .large {
@@ -138,7 +139,7 @@ body {
 .medium {
   @include font-weight(light);
   font-size: 16px;
- }
+}
 
 .small {
   @include font-weight(light);
