--- a/_scss/components/_blurbs.scss
+++ b/_scss/components/_blurbs.scss
@@ -93,7 +93,6 @@
 .blurb-footer {
   @extend .small;
   line-height: 25px;
-  margin-top: 2px;
 
   a {
     @extend .link;
