--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -53,8 +53,8 @@
 
 .blog-aside-title {
   @extend .kilo;
-  margin-bottom: 50px;
-  margin-top: 160px;
+  padding-bottom: 20px;
+  padding-top: 70px;
   white-space: nowrap;
 }
 
